2001-11-26  Matthias Clasen  <matthiasc@poet.de>

	* glib/gtree.h: Mark g_tree_traverse() as deprecated. (#65343)
	
	* glib/gtree.c (g_tree_traverse): Explain the deprecation in 
	some detail.

Mon Nov 26 09:42:24 2001  Tim Janik  <timj@gtk.org>

	* configure.in: provide GLIB_SIZEOF_SIZE_T.

2001-11-26  Jesus Bravo Alvarez  <jba@pobox.com>

	* configure.in: Added gl (Galician) to ALL_LINGUAS

2001-11-23  Hans Breuer  <hans@breuer.org>

	* glib/makefile.msc.in : added -Zm400 to DEPCFLAGS to avoid :
	gunidecomp.h(5846) : fatal error C1076: compiler limit : 
	internal heap limit reached; use /Zm to specify a higher limit

	* glibconfig.h.win32.in : added recommended pragma list for
	msvc again. They are an invaluable help of letting the
	compiler catch bugs.

Thu Nov 22 13:56:55 2001  Owen Taylor  <otaylor@redhat.com>

	* Version 1.3.11

Thu Nov 22 13:14:18 2001  Owen Taylor  <otaylor@redhat.com>

	* configure.in (GLIB_MICRO_VERSION): Version 11, 
	interface, binary age 0.

	* NEWS: Updated.

 	* tests/Makefile.am (libmoduletestplugin_[ab]_la_LDFLAGS): 
 	Add dummy -rpath argument. On some (but not all) platforms,
 	libtool will only build a convenience library without this.
 	(#63486, Dan Winship)
 
	* Makefile.am (EXTRA_DIST): Add README.in, INSTALL.in - 
	autoconf-2.5x checks for 'make dist' in the tarball
	when you make distcheck.

	* glib/Makefile.am (EXTRA_DIST): Distribute 
	makefile.msc/mingw.in, glib.rc.in.

	* tests/patterntest.c: Include string.h.

	* glib/gpattern.c (g_utf8_reverse): doc parsing fix.

Thu Nov 22 02:50:18 2001  Tim Janik  <timj@gtk.org>

	* NEWS: merged with gobject/NEWS.

2001-11-21  Tor Lillqvist  <tml@iki.fi>

	* glib/makefile.mingw.in (DEFINES): Set G_LOG_DOMAIN as in
	Makefile.am.

Tue Nov 20 20:54:25 2001  Owen Taylor  <otaylor@redhat.com>

	* glib/gunidecomp.[ch] glib/gen-unicode-tables.pl: Patch
	from Andrew Taylor to optimize the decomposition table
	to eliminate relocations and save space. (#64982)
